gccida/c0/process_insert_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_insert_insn/src/gcse.c:5065:30: error: use of undeclared identifier 'machine_mode'
if ( general_operand( exp, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg)) ) 
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_insert_insn/src/gcse.c:5065:45: error: expected expression
if ( general_operand( exp, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)reg)) ) 
                                            ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/process_insert_insn/src/obj/gcse.o] Error 1
